Implementacion se la seleccion de region

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="onPlayClick"
     tools:context=".Menu">
 
     <androidx.core.widget.NestedScrollView
@@ -109,12 +110,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorAccent"
+        android:onClick="onPlayClick"
         android:src="@drawable/ic_search"
         android:tint="@color/colorWhite"
         app:layout_anchor="@id/appBar"
-        app:maxImageSize="35dp"
 
-        />
+        app:maxImageSize="35dp" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
