--- a/app/src/main/res/layout/activity_region.xml
+++ b/app/src/main/res/layout/activity_region.xml
@@ -46,11 +46,14 @@
 
         <Spinner
             android:id="@+id/spinner"
+
             android:layout_width="334dp"
             android:layout_height="44dp"
             android:layout_marginStart="36dp"
             android:layout_marginLeft="36dp"
             android:layout_marginTop="16dp"
+            android:background="@color/colorPrimary"
+            android:popupBackground="@color/colorPrimary"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
